Closed
Bug 630488
Opened 15 years ago
Closed 15 years ago
ASSERTION: Document accessible isn't a child of outerdoc accessible in nsOuterDocAccessible::CacheChildren()
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
mozilla2.0b11
People
(Reporter: surkov, Assigned: surkov)
Details
(Keywords: assertion)
Attachments
(1 file)
|
1.24 KB,
patch
|
davidb
:
review+
davidb
:
approval2.0+
|
Details | Diff | Splinter Review |
this doesn't look like we need this assertion after bug 606924 is fixed. We create root accessible, create its tree, stick nsOuterDocAccessible to create its associated sub document accessible and assert (because this document accessible is hanging (hasn't parent) until it gets first refresh observer).
| Assignee | ||
Comment 1•15 years ago
|
||
the stack is:
xul.dll!nsOuterDocAccessible::CacheChildren() Line 257 + 0x2e bytes C++
xul.dll!nsAccessible::EnsureChildren() Line 3193 C++
xul.dll!nsDocAccessible::CacheChildrenInSubtree(nsAccessible * aRoot) Line 1928 C++
xul.dll!nsDocAccessible::CacheChildrenInSubtree(nsAccessible * aRoot) Line 1934 C++
xul.dll!nsDocAccessible::CacheChildrenInSubtree(nsAccessible * aRoot) Line 1934 C++
xul.dll!nsDocAccessible::CacheChildrenInSubtree(nsAccessible * aRoot) Line 1934 C++
xul.dll!nsDocAccessible::CacheChildrenInSubtree(nsAccessible * aRoot) Line 1934 C++
xul.dll!NotificationController::WillRefresh(mozilla::TimeStamp aTime) Line 224 C++
xul.dll!nsRefreshDriver::Notify(nsITimer * __formal) Line 256 C++
| Assignee | ||
Comment 2•15 years ago
|
||
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #508709 -
Flags: review?(bolterbugz)
Attachment #508709 -
Flags: approval2.0?
Comment 3•15 years ago
|
||
Comment on attachment 508709 [details] [diff] [review]
patch
r+a=me thanks for the explanation in comment 0; it made this much easier.
Attachment #508709 -
Flags: review?(bolterbugz)
Attachment #508709 -
Flags: review+
Attachment #508709 -
Flags: approval2.0?
Attachment #508709 -
Flags: approval2.0+
| Assignee | ||
Comment 4•15 years ago
|
||
landed on 2.0 - http://hg.mozilla.org/mozilla-central/rev/ae9bc934ead9
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b11
You need to log in
before you can comment on or make changes to this bug.
Description
•