Bug 630488 - ASSERTION: Document accessible isn't a child of outerdoc accessible in nsOuterDocAccessible::CacheChildren(), r=davidb, a=davidb